--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,55 +1,63 @@
 <html>
 	<head>
 		<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-		<script src="libs/jquery.simpleWeather.min.js"></script>
+		<script src="libs/javascripts/jquery.simpleWeather.min.js"></script>
 		<script src="js/data.js"></script>
 		<script src="js/config.js"></script>
 		<script src="js/main.js"></script>
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css' />
-		<link href='libs/weather-icons.min.css' rel='stylesheet' type='text/css' />
+		<link href='libs/styles/weather-icons.min.css' rel='stylesheet' type='text/css' />
 		<link href='css/style.css' rel='stylesheet' type='text/css' />
 	</head>
 	<body>
-		<div id="datetime" class="top">
-			<div id="timeContainer">
-				<div id="time"></div>
-				<div id="period"></div>
-			</div>
-			<div id="date"></div>
-		</div>
+		<section class="page" id="calendar">
 
-		<div id="weather" class="top">
-			<div class="today">
-				<span class="description"></span>
-				<div class="todayIcon">
-					<i></i>
+		</section>
+		<section class="page" id="dashboard">
+			<div id="datetime" class="top">
+				<div id="timeContainer">
+					<div id="time"></div>
+					<div id="period"></div>
 				</div>
-				<div class="temps">
-					<div>
-						<span class="now"></span>
+				<div id="date"></div>
+			</div>
+
+			<div id="weather" class="top">
+				<div class="today">
+					<span class="description"></span>
+					<div class="todayIcon">
+						<i></i>
 					</div>
-					<div class="hilo">
+					<div class="temps">
+						<div>
+							<span class="now"></span>
+						</div>
+						<div class="hilo">
+							<span class="high"></span> | <span class="low"></span>
+						</div>
+					</div>
+					<br class="clear" />
+				</div>
+				<div class="forecast"></div>
+				<div class="forecastItem hidden">
+					<i></i>
+					<div class="temps">
 						<span class="high"></span> | <span class="low"></span>
 					</div>
+					<div class="day"></div>
 				</div>
-				<br class="clear" />
 			</div>
-			<div class="forecast"></div>
-			<div class="forecastItem hidden">
-				<i></i>
-				<div class="temps">
-					<span class="high"></span> | <span class="low"></span>
-				</div>
-				<div class="day"></div>
-			</div>
-		</div>
 
-		<div id="news" class="bottom">
-			<div class="newsContainer"></div>
-			<div class="newsItem hidden">
-				<div class="title"></div>
-				<div class="time"></div>
+			<div id="news" class="bottom">
+				<div class="newsContainer"></div>
+				<div class="newsItem hidden">
+					<div class="title"></div>
+					<div class="time"></div>
+				</div>
 			</div>
-		</div>
+		</section>
+		<section class="page" id="headlines">
+
+		</section>
 	</body>
 </html>
