--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -189,9 +189,11 @@ body {
 			}
 
 			.time {
-				width: 20%;
+				position:absolute;
 				text-align: right;
-				font-size: 50px
+				font-size: 50px;
+				right: 0;
+				bottom: 0;
 			}
 
 			&:first-child {
