--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -62,6 +62,13 @@ body::-webkit-scrollbar {
       }
 
     }
+
+    .events {
+      font-size: 40;
+      list-style: none;
+      padding: 5px 0 10px 30px;
+
+    }
   }
 }
 
